--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-on-rails": "12.0.5-beta.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3"
   }
 }
